<resources>
    <string name="app_name">Eztip</string>
<string name="title">Calculate Tip</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_compose">Compose</string>
    <string name="total">Bill Total</string>
        <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
        <string name="title_activity_help">Help</string>
        <string name="title_activity_mail">MailActivity</string>
    <string name="Contactus">Contacts</string>
    <string name="contacttitle">Add Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="contacts">Contacts</string>
    <string name="people">Number of People</string>
    <string name="tipammount"> Tip Precent</string>
    <string name="totaleg">Total. Ex. 100 </string>
    <string name="peopleeg"># of People. Ex. 4 </string>
    <string name="percenteg">Percent. Ex. 15</string>
    <string name="split">Tip</string>
    <string name="each">Tip Ammount</string>
    <string name="tiptotal">Total plus Tip</string>
    <string name="tiptotal2">Tip Amount</string>
</resources>
