<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.jstreetdev.eztip.MailActivity">


    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabHost"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </TabWidget>
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tabContactList"
                    android:layout_width="match_parent"
                    android:layout_height="460dp"
                    android:orientation="vertical"
                    android:filterTouchesWhenObscured="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/contacts"
                        android:id="@+id/textView3"
                        android:layout_gravity="center_horizontal" />

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="481dp"
                        android:id="@+id/listView1"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabCreator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:hapticFeedbackEnabled="false"
                    android:isScrollContainer="true"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    android:fadeScrollbars="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/contacttitle"
                        android:id="@+id/textView"
                        android:textSize="40dp"
                        android:layout_gravity="center_horizontal" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgViewContactImage"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/no_user" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/name"
                        android:ems="10"
                        android:id="@+id/nameTxt"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/phoneTxt"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/phone"
                        android:paddingTop="20dp"
                        android:phoneNumber="true" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/emailTxt"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="20dp"
                        android:hint="@string/email" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:ems="10"
                        android:id="@+id/addressTxt"
                        android:paddingTop="20dp"
                        android:hint="@string/address"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:id="@+id/submitBtn"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:editable="true" />

                </LinearLayout>

            </FrameLayout>
            </ScrollView>
        </LinearLayout>
    </TabHost>

</LinearLayout>
